Updated case file

--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -46,38 +46,39 @@ As part of this operation, stealer logs containing information on many victims o
 
 A group of partners, including [NCSC](https://www.ncsc.nl), [DTC](https://www.digitaltrustcenter.nl/), DIVD and [TODO] are doing their best to notify the victims in the various datasets.
 
-### The dataset contains
+### Datasets invilved
+Sofar we have received the following datasets:
+1. Logs of the [Rhadamanthys](https://malpedia.caad.fkie.fraunhofer.de/details/win.rhadamanthys) infostealer - 36GB - 93,010,313 records, 5,107,559 unique email addresses - Received on 13-11-2025
+
+### The datasets contain
 The datasets contain stolen user data, including usernames, redacted passwords, the URL and timestamp of the last observed use, and, where available, the victim’s IP address, device (computer) name, and local user account.
 
 ### Possible impact if no action is taken
 The data on its own might appear harmless or insignificant, but when combined with reused passwords, lack of MFA (Multi-Factor Authentication), or internal host and user context, it makes account takeovers, fraud, and network intrusion possible. Taking action helps protect your accounts and personal information from being misused. 
 
-## What you must do
-Whilest we analyse the data, this section will be updated. Please act immediately if you receive a notification email from us. Instructions can be found in the email and below.
-<!---
-If you received a notification frm DIVD about this dataset, it means that either you yourself, a member of your organisation or a customer of your service has fallen victim to info stealer. This means a device has been compromised, one or more passwords have been stolen.
+## What you can do
+
+Since the datasets contain data of too many individuals, we will not be sending out individual notifications. Instead we are enabling certs, csirts and security teams to check of data of their users is present in the datasets we received and, if present, to request the details. We have outlined the [full precedure on our credentials page](/credentials).
+
+If you want to find out if your organsiation was impacted, you can find out as follows:
+* Download the Endgame 2025q4 datasets:
+  - [Batch 1: Rhadamanthys - 13-11-2025](/downloads/DIVD-2025-00041/DIVD-2025-00041-batch1-apexes.tgz)
+* Open the files (watch out Excel truncates them due to their size) and look for domains you are responsible for.
+* If you have found domains that belong to you, you can send an email to [divd-2025-00041@csirt.divd.nl](mailto:divd-2025-00041@csirt.divd.nl?SUBJECT:Information+request+DIVD-2025-00041) to request the data that belongs to these domains.
+
+Please note: we will validate your claim and only send you data if your country has a sufficiently high score on the huan rights index.
+
+### I / my users are on the list now what?
 
 Here are the steps you can take depending on your situation:
 * Instructions for when [your data has been stolen/your computer has been compromised](/DIVD-2025-00041/victim-instructions/)
 * Instructions for when [users of your organisations have been compromised](/DIVD-2025-00041/organisation-instructions)
 * Instructions for when [users of your service have been compromised](/DIVD-2025-00041/service-instructions)
 
-Due to the volume of the dataset we have not been able to send notifications to each and every organisation. If you want to find out if your organsiation was impacted, you can find out as follows:
-* Download the [Endgame 2025q4 dataset](/downloads/DIVD-2025-00041/endgame-dataset.tgz)
-* Open the files (watch out Excel truncates them due to their size) and look for domains you are responsible for
-* If you have found domains that belong to you, you can send an email to [divd-2025-00041@csirt.divd.nl](mailto:divd-2025-00041@csirt.divd.nl) to request the data that belongs to these domains.
---->
 
 ## What we are doing
 
-We are now analysing the received data, once finished we’ll start victim notification. Therefore we work by our stolen credentials policy.  [stole credentials policy](/credentials/)
-
-###Details of this operation
-- [link]
-- [operation endgame]
-- [press release Europol]
-- [press release Dutch National Police] 
-- [divd./nl/case] 
+As we receive more information, we will analyse them and publish more apex sets. Make sure you keep an eye on this space and our [CSIRT blog](/blog) or [RSS feed](https://csirt.divd.nl/feed.xml) 
 
 
 ## Frequently asked questions
@@ -142,7 +143,9 @@ A: Yes it is. Under Dutch law and European privacy regulations, we can process t
 
 
 ## More information
+
 * [Operation Endgame website](https://www.operation-endgame.com)
+* [Bleeping computer article about takedown of Rhadamanthys infostealer](https://www.bleepingcomputer.com/news/security/rhadamanthys-infostealer-disrupted-as-cybercriminals-lose-server-access/)
 <!-- TODO 
 * [Operation Endgame persbericht Nederlandse Politie](https://www.politie.nl/nieuws/2025/mei/22/11-internationale-politiediensten-pakken-met-operation-endgame-door-in-bestrijding-ransomware.html)
 * [Operation Endgame perbericht Europol](https://www.europol.europa.eu/media-press/newsroom/news/operation-endgame-strikes-again-ransomware-kill-chain-broken-its-source)
