Added creds count

--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -34,7 +34,7 @@ timeline:
 #- start: 2025-11-13
 #  event: "DIVD sends out first notifications."
 ips: n/a
-creds: n/a
+creds: 94010313
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
