--- a/_posts/2025/25-11-13-Endgame-s03e01.md
+++ b/_posts/2025/25-11-13-Endgame-s03e01.md
@@ -8,4 +8,4 @@ As part of [Operation End S03E01](https://www.operation-endgame.com/) law enforc
 
 We have received the first dataset from the Dutch Police containing credentions of over 94M accounts from al least 3M users.
 
-We allow certs, csirts and security teams to look at the extracts we made from this information and request information about domains in ther constituency. See the [Endgame S03E01 case file](/DIVD-2025-00041/) for more information.
+We encourage certs, csirts and security teams to look at the extracts we made from this information and request information about domains in ther constituency. See the [Endgame S03E01 case file](/DIVD-2025-00041/) for more information.
