--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -8,6 +8,7 @@ lead: Frank Breedijk
 researchers:
 - Frank Breedijk
 - Marieke Smits
+- Stan Plasmeijer
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet).
 cves:
 - n/a
@@ -40,7 +41,7 @@ creds: 94010313
 ---
 ## Summary
 
-On November 13th 2025, The Dutch National Police, in cooperation with EuropPol, Eurojust and the police of Australia, Belgium, Canada, Denmark, France, Germand, Greece, Lithuania, the UK and the US announced they took down 1025 servers of botnet operators worldwide in a another episode of [Operation Endgame](https://operation-endgame.com/), the biggest continued anti-botnet operation to date. During this takedown,  stolen data has been seized.
+On November 13th 2025, The Dutch National Police, in cooperation with Europol, Eurojust and the police of Australia, Belgium, Canada, Denmark, France, Germand, Greece, Lithuania, the UK and the US announced they took down 1025 servers of botnet operators worldwide in a another episode of [Operation Endgame](https://operation-endgame.com/), the biggest continued anti-botnet operation to date. During this takedown,  stolen data has been seized.
 
 As part of this operation, stealer logs containing information on many victims of the targeted malware platforms have been shared with: [DIVD](https://wwww.divd.nl), [Have I Been Pwned](https://haveibeenpwned.com/), [Spamhaus](https://www.spamhaus.org/resource-hub/malware/operation-endgame-botnets-disrupted-after-international-action/), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
 
@@ -89,7 +90,7 @@ As we receive more information, we will analyse them and publish more apex sets.
 
 **Q: Is this a scam?**
 
-A: It’s great that you’re skeptical. However, this is legit and definitely not a scam. This operation is a collaboration between the Dutch National Police, Europol, Digital Trust Center, NCSC and others. We, the Dutch Institute of Vulnerability Disclosure (DIVD), are mentioned on the [partner page](https://operation-endgame.com/partners/) of the Operation Endgame site as well as the [press release of Europoll](https://www.europol.europa.eu/media-press/newsroom/news/end-of-game-for-cybercrime-infrastructure-1025-servers-taken-down) and [the Dutch National Police](https://www.politie.nl/nieuws/2025/november/12/11-opnieuw-criminele-infrastructuur-ontmanteld-in-internationale-ransomware-operatie.html). 
+A: It’s great that you’re skeptical. However, this is legit and definitely not a scam. This operation is a collaboration between the Dutch National Police, Europol, Digital Trust Center, NCSC and others. We, the Dutch Institute of Vulnerability Disclosure (DIVD), are mentioned on the [partner page](https://operation-endgame.com/partners/) of the Operation Endgame site as well as the [press release of Europol](https://www.europol.europa.eu/media-press/newsroom/news/end-of-game-for-cybercrime-infrastructure-1025-servers-taken-down) and [the Dutch National Police](https://www.politie.nl/nieuws/2025/november/12/11-opnieuw-criminele-infrastructuur-ontmanteld-in-internationale-ransomware-operatie.html). 
 
 ---
 
@@ -145,6 +146,6 @@ A: Yes it is. Under Dutch law and European privacy regulations, we can process t
 ## More information
 
 * [Operation Endgame website](https://www.operation-endgame.com)
-* [Europoll press release](https://www.europol.europa.eu/media-press/newsroom/news/end-of-game-for-cybercrime-infrastructure-1025-servers-taken-down)
+* [Europol press release](https://www.europol.europa.eu/media-press/newsroom/news/end-of-game-for-cybercrime-infrastructure-1025-servers-taken-down)
 * [Press release of Dutch police (in Dutch)](https://www.politie.nl/nieuws/2025/november/12/11-opnieuw-criminele-infrastructuur-ontmanteld-in-internationale-ransomware-operatie.html)
 * [Bleeping computer article about takedown of Rhadamanthys infostealer](https://www.bleepingcomputer.com/news/security/rhadamanthys-infostealer-disrupted-as-cybercriminals-lose-server-access/)
