--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -41,7 +41,7 @@ creds: 94010313
 ---
 ## Summary
 
-On November 13th 2025, The Dutch National Police, in cooperation with Europol, Eurojust and the police of Australia, Belgium, Canada, Denmark, France, Germand, Greece, Lithuania, the UK and the US announced they took down 1025 servers of botnet operators worldwide in a another episode of [Operation Endgame](https://operation-endgame.com/), the biggest continued anti-botnet operation to date. During this takedown,  stolen data has been seized.
+On November 13th 2025, The Dutch National Police, in cooperation with Europol, Eurojust and the police of Australia, Belgium, Canada, Denmark, France, Germany, Greece, Lithuania, the UK and the US announced they took down 1025 servers of botnet operators worldwide in a another episode of [Operation Endgame](https://operation-endgame.com/), the biggest continued anti-botnet operation to date. During this takedown,  stolen data has been seized.
 
 As part of this operation, stealer logs containing information on many victims of the targeted malware platforms have been shared with: [DIVD](https://wwww.divd.nl), [Have I Been Pwned](https://haveibeenpwned.com/), [Spamhaus](https://www.spamhaus.org/resource-hub/malware/operation-endgame-botnets-disrupted-after-international-action/), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
 
