--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -59,7 +59,7 @@ The data on its own might appear harmless or insignificant, but when combined wi
 
 ## What you can do
 
-Since the datasets contain data of too many individuals, we will not be sending out individual notifications. Instead we are enabling certs, csirts and security teams to check of data of their users is present in the datasets we received and, if present, to request the details. We have outlined the [full precedure on our credentials page](/credentials).
+Since the datasets contain data of too many individuals, we will not be sending out individual notifications. Instead we are enabling certs, csirts and security teams to check of data of their users is present in the datasets we received and, if present, to request the details. We have outlined the [full procedure on our credentials page](/credentials).
 
 If you want to find out if your organisation was impacted, you can find out as follows:
 * Download the Endgame S03E01 datasets:
