--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -67,7 +67,7 @@ If you want to find out if your organisation was impacted, you can find out as f
 * Open the files (watch out Excel truncates them due to their size) and look for domains you are responsible for.
 * If you have found domains that belong to you, you can send an email to [divd-2025-00041@csirt.divd.nl](mailto:divd-2025-00041@csirt.divd.nl?SUBJECT:Information+request+DIVD-2025-00041) to request the data that belongs to these domains.
 
-Please note: we will validate your claim and only send you data if your country has a sufficiently high score on the human rights index.
+Please note: we will validate your claim and only send you data if your country has a sufficiently high score on the Human Rights Index.
 
 ### I / my users are on the list now what?
 
