Update to timeline of endgame s03e01

--- a/_cases/2025/DIVD-2025-00041.md
+++ b/_cases/2025/DIVD-2025-00041.md
@@ -20,19 +20,19 @@ recommendation: If you received a notification from us, it means that you, membe
 #patch_status: Fully patched
 #workaround: n/a
 status : Open
-start: 2025-05-22
+start: 2025-11-07
 end:
 timeline:
-#- start: 2025-05-22
-#  end: 2025-05-22
-#  event: "Period of collecting data."
+- start: 2025-11-10
+  end: 2025-11-14
+  event: "Period data was seized."
 - start: 2025-11-13
   end:
   event: "Dutch National Police goes public with a new episode of Operation Endgame"
 - start: 2025-11-13
   event: "DIVD receives data from the national police."
-#- start: 2025-11-13
-#  event: "DIVD sends out first notifications."
+- start: 2025-11-13
+  event: "Case file is public and first data avaiable"
 ips: n/a
 creds: 94010313
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
