Change volunteer name

--- a/_cases/2024/DIVD-2024-00013.md
+++ b/_cases/2024/DIVD-2024-00013.md
@@ -7,7 +7,7 @@ lead: Stan Plasmeijer
 researchers:
 - Stan Plasmeijer
 - Ralph Horn
-- Wessel van der Goot
+- Former DIVD volunteer
 cves:
 - CVE-2024-3400
 product: 
