Update and rename DIVD-2025-00042 to DIVD-2025-00042.md

--- a/_cases/2025/DIVD-2025-00042.md
+++ b/_cases/2025/DIVD-2025-00042.md
@@ -2,7 +2,7 @@
 layout: case
 
 title: "React2shell vulnerability"
-excerpt: "Multiple vulnerabilities in React Server components allow unauthorized access via Remote Code Execution."
+excerpt: "A vulnerability in React Server components allow unauthorized access via Remote Code Execution."
 author: Victor Pasman
 lead: Victor Pasman
 status: Open
