--- a/_cases/2025/DIVD-2025-00022.md
+++ b/_cases/2025/DIVD-2025-00022.md
@@ -47,16 +47,16 @@ The Monitoring Platform issue is a **network**-reachable cross-site scripting (X
 ## Vulnerability details
 
 ### CVE-2025-36743 — Exposed debug/test interface (SE3680H)
-An exposed debug/test interface is accessible to unauthenticated actors with physical access, enabling disclosure of system internals and execution of debug commands. :contentReference[oaicite:6]{index=6}
+An exposed debug/test interface is accessible to unauthenticated actors with physical access, enabling disclosure of system internals and execution of debug commands.
 
 ### CVE-2025-36744 — Bootloader-loop diagnostic information exposure (SE3680H)
-During a bootloader loop, the device emits diagnostic output that may leak operating system information to an unauthenticated actor with physical access. :contentReference[oaicite:9]{index=9}
+During a bootloader loop, the device emits diagnostic output that may leak operating system information to an unauthenticated actor with physical access.
 
 ### CVE-2025-36745 — Outdated Linux kernel / unmaintained components (SE3680H)
-The device ships with an outdated Linux kernel containing unpatched vulnerabilities. The advisory notes exploitation may enable outcomes such as code execution, privilege escalation, or sensitive information disclosure (depending on the underlying kernel flaws). :contentReference[oaicite:12]{index=12}
+The device ships with an outdated Linux kernel containing unpatched vulnerabilities. The advisory notes exploitation may enable outcomes such as code execution, privilege escalation, or sensitive information disclosure (depending on the underlying kernel flaws).
 
 ### CVE-2025-36746 — XSS on report deletion flow (SolarEdge Monitoring Platform)
-An authenticated user can inject payloads into report names; the payload may execute in another user’s browser during a deletion attempt. :contentReference[oaicite:15]{index=15}
+An authenticated user can inject payloads into report names; the payload may execute in another user’s browser during a deletion attempt.
 
 ## What you can do
 We strongly advises impacted organisations to immediately apply Security Patch.
