--- a/_cases/2025/DIVD-2025-00022.md
+++ b/_cases/2025/DIVD-2025-00022.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "SolarEdge SE3680H and SolarEdge Monitoring Platform vulnerabilities (CVE-2025-36743 / 36744 / 36745 / 36746)"
+title: "SolarEdge SE3680H and SolarEdge Monitoring Platform vulnerabilities"
 excerpt: "Vulnerabilities found in SolarEdge SE3680H and SolarEdge Monitoring Platform vulnerabilities."
 status: Open
 author: Victor Pasman
