--- a/_cases/2025/DIVD-2025-00022.md
+++ b/_cases/2025/DIVD-2025-00022.md
@@ -29,7 +29,7 @@ end:
 timeline:
 - start: 2025-12-18
   end: 
-  event: "CVE numbers have been disclosed."
+  event: "CVE records have been published."
 ips: 
 ---
 
