--- a/_cases/2025/DIVD-2025-00022.md
+++ b/_cases/2025/DIVD-2025-00022.md
@@ -59,7 +59,7 @@ The device ships with an outdated Linux kernel containing unpatched vulnerabilit
 An authenticated user can inject payloads into report names; the payload may execute in another user’s browser during a deletion attempt.
 
 ## What you can do
-We strongly advises impacted organisations to immediately apply Security Patch.
+We strongly advises impacted organisations to immediately apply Security Patches.
 
 {% include timeline.html %}
 
