Updates to casefile

--- a/_cases/2025/DIVD-2025-00011.md
+++ b/_cases/2025/DIVD-2025-00011.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
-title: Failed authentication check in Growatt portal
+title: Severe vulnerabilities in Growatt portal
 excerpt: "Authentication vulnerability in the `plant transfer` function of the Growatt cloud portal allowed an attacker with an account to take over any plant form any user."
 author: Frank Breedijk
 lead: Frank Breedijk
@@ -56,6 +56,14 @@ timeline:
   # Time to patch is antoher important metric
 - start: 2025-06-17
   event: Vendor reports vulnerabilities as fixed
+- start: 2025-10-21
+  event: Vulnerability reappears due to regression
+- start: 2025-10-28
+  event: Humza Ahmed finds more severe vulnerabilities in portal
+- start: 2024-12-05
+  event: Growatt contacted again
+
+
 # ips: 0 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
@@ -85,6 +93,6 @@ We have disclosed the vulnerability to the vendor who, once we established conta
 
 
 ## More information
-* {% cve: CVE-2025-29757 %}
-* [https://oss.growatt.com](https://oss.growatt.com0 - URL 1
-* [https://server.growatt.com](https://server.growatt.com)
+* {% cve CVE-2025-29757 %}
+* [https://oss.growatt.com](https://oss.growatt.com) - URL 1
+* [https://server.growatt.com](https://server.growatt.com) - URL 2
