--- a/_cases/2025/DIVD-2025-00022.md
+++ b/_cases/2025/DIVD-2025-00022.md
@@ -27,6 +27,15 @@ severity:
 start: 2025-12-18
 end:
 timeline:
+- start: 2025-06-18
+  end:
+  event: "Started disclosure process with supplier."
+- start: 2025-09-21
+  end:
+  event: "Resolved feedback from supplier and shared additional information with Supplier"
+- start: 2025-12-4
+  end:
+  event: "Agreed on disclosure time."
 - start: 2025-12-18
   end: 
   event: "CVE records have been published."
