--- a/_cases/2026/DIVD-2026-00002.md
+++ b/_cases/2026/DIVD-2026-00002.md
@@ -18,22 +18,19 @@ versions:
 - 12.6.1.0 and prior
 patch_status: "Available"
 case_number: DIVD-2026-00002
----
+excerpt: "Two critical vulnerabilities in Ivanti Endpoint Manager Mobile allow unauthenticated remote code execution. One vulnerability is actively exploited in the wild, with public proof-of-concept code available."
 
 ## Summary
 Two critical vulnerabilities have been found in in **Ivanti Endpoint Manager Mobile (EPMM)**, formerly known as **MobileIron**. One of these vulnerabilities is actively exploited in the wild, and public Proof-of-Concept (PoC) exploit code is available.
 
 Organizations using Ivanti EPMM are strongly advised to apply patches immediately and assume compromise if systems were exposed prior to mitigation.
 
----
 
 ## What is happening?
 
 Ivanti has released security updates addressing two vulnerabilities that allow **remote code execution without authentication**. According to Ivanti, targeted attacks exploiting one of these vulnerabilities have already been observed.
 
 The availability of PoC code significantly increases the risk of widespread exploitation.
-
----
 
 ## What we are doing
 
@@ -57,8 +54,6 @@ Successful exploitation can result in:
 - Lateral movement within enterprise environments
 
 Due to confirmed active exploitation, the impact should be considered **severe** for unpatched systems.
-
----
 
 ## Mitigation and Recommendations
 
@@ -95,4 +90,5 @@ timeline:
 
 * [NCSC Advisory NCSC-2026-0043](https://advisories.ncsc.nl/2026/ncsc-2026-0043.html)
 * [NCSC Warning on Ivanti Endpoint Manager Mobile](https://www.ncsc.nl/waarschuwingncsc-roept-organisaties-op-zich-te-melden-bij-gebruik-van-ivanti-endpoint-manager)
+
 * [Ivanti Security Updates](https://www.ivanti.com/security)
