--- a/_cases/2026/DIVD-2026-00002.md
+++ b/_cases/2026/DIVD-2026-00002.md
@@ -1,24 +1,16 @@
 ---
-layout: casefile
+layout: case
 title: "DIVD-2026-00002 – Ivanti Endpoint Manager Mobile Vulnerabilities"
+excerpt: "Two critical vulnerabilities in Ivanti Endpoint Manager Mobile allow unauthenticated remote code execution. One vulnerability is actively exploited in the wild, with public proof-of-concept code available."
 author: Victor Pasman
 lead: Victor Pasman
+status: Open
 researchers:
 - Davy Aarts
 - Victor Pasman
-status: Open
-cves:
-- CVE-2026-1281
-- CVE-2026-1340
-versions:
-- 12.5.0.0 and prior
-- 12.6.0.0 and prior
-- 12.7.0.0 and prior
-- 12.5.1.0 and prior
-- 12.6.1.0 and prior
-patch_status: "Available"
-case_number: DIVD-2026-00002
-excerpt: "Two critical vulnerabilities in Ivanti Endpoint Manager Mobile allow unauthenticated remote code execution. One vulnerability is actively exploited in the wild, with public proof-of-concept code available."
+cves: CVE-2026-1281, CVE-2026-1340
+versions: 12.5.0.0 and prior, 12.6.0.0 and prior, 12.7.0.0 and prior, 12.5.1.0 and prior, 12.6.1.0 and prior,
+patch_status: Available
 
 ## Summary
 Two critical vulnerabilities have been found in in **Ivanti Endpoint Manager Mobile (EPMM)**, formerly known as **MobileIron**. One of these vulnerabilities is actively exploited in the wild, and public Proof-of-Concept (PoC) exploit code is available.
@@ -92,3 +84,4 @@ timeline:
 * [NCSC Warning on Ivanti Endpoint Manager Mobile](https://www.ncsc.nl/waarschuwingncsc-roept-organisaties-op-zich-te-melden-bij-gebruik-van-ivanti-endpoint-manager)
 
 * [Ivanti Security Updates](https://www.ivanti.com/security)
+
