--- a/_cases/2026/DIVD-2026-00002.md
+++ b/_cases/2026/DIVD-2026-00002.md
@@ -12,6 +12,22 @@ cves: CVE-2026-1281, CVE-2026-1340
 versions: 12.5.0.0 and prior, 12.6.0.0 and prior, 12.7.0.0 and prior, 12.5.1.0 and prior, 12.6.1.0 and prior,
 patch_status: Available
 
+start: 2026-02-05
+end: 
+timeline: 
+- start: 2026-01-29
+  end:
+  event: Initial publication vulnerabilities
+- start: 2026-02-04
+  end:
+  event: Advisory updated to include public PoC availability
+- start: 2026-02-05
+  end:
+  event: Case started by DIVD researchers
+- start: 2026-02-05
+  end: 
+  event: Scanned instances and send out the notifications
+
 ## Summary
 Two critical vulnerabilities have been found in in **Ivanti Endpoint Manager Mobile (EPMM)**, formerly known as **MobileIron**. One of these vulnerabilities is actively exploited in the wild, and public Proof-of-Concept (PoC) exploit code is available.
 
@@ -62,20 +78,6 @@ Due to confirmed active exploitation, the impact should be considered **severe**
 - Rebuild affected systems if compromise is suspected
 - Monitor vendor and NCSC updates for additional indicators of compromise
 
-timeline: 
-- start: 2026-01-29
-  end:
-  event: Initial publication vulnerabilities
-- start: 2026-02-04
-  end:
-  event: Advisory updated to include public PoC availability
-- start: 2026-02-05
-  end:
-  event: Case started by DIVD researchers
-- start: 2026-02-05
-  end: 
-  event: Scanned instances and send out the notifications
-
 {% include timeline.html %}
 
 ## References
@@ -84,4 +86,5 @@ timeline:
 * [NCSC Warning on Ivanti Endpoint Manager Mobile](https://www.ncsc.nl/waarschuwingncsc-roept-organisaties-op-zich-te-melden-bij-gebruik-van-ivanti-endpoint-manager)
 
 * [Ivanti Security Updates](https://www.ivanti.com/security)
+
 
