update old cases

--- a/_cases/2025/DIVD-2025-00042.md
+++ b/_cases/2025/DIVD-2025-00042.md
@@ -28,9 +28,9 @@ workaround: "If patching is not immediately possible, consider disabling functio
 
 case_number: DIVD-2025-00042
 
-status: "Open"
+status: "Closed"
 start: 2025-12-08
-end:
+end: 2025-12-11
 
 timeline:
 - start: 2025-12-08
