Add IPS field to DIVD-2025-00042 case

--- a/_cases/2025/DIVD-2025-00042.md
+++ b/_cases/2025/DIVD-2025-00042.md
@@ -27,7 +27,7 @@ patch_status: "Available"
 workaround: "If patching is not immediately possible, consider disabling functionality or limiting access to trusted networks only."
 
 case_number: DIVD-2025-00042
-
+ips: 1000
 status: "Closed"
 start: 2025-12-08
 end: 2025-12-11
