updated 00038 to close

--- a/_cases/2025/DIVD-2025-00038.md
+++ b/_cases/2025/DIVD-2025-00038.md
@@ -15,9 +15,9 @@ versions:
 - All supported FreePBX versions before v16 with publicly exposed admin interfaces
 recommendation: "Restrict access to the FreePBX administrator interface (via VPN, firewall, or access control lists). Do not expose it directly to the internet."
 patch_status: Available
-status : Open
+status : Closed
 start: 2025-08-27
-end:
+end: 2025-08-28
 timeline:
 - start: 2025-08-27
   end:
@@ -28,7 +28,7 @@ timeline:
 - start: 2025-08-28
   end:
   event: "DIVD scans for webshelled instances"
-#ips:
+ips: 699
 # Not applicable — exposure depends on admin interface configuration
 ---
 ## Summary
