Closed old cases with Stan

--- a/_cases/2025/DIVD-2025-00006.md
+++ b/_cases/2025/DIVD-2025-00006.md
@@ -22,7 +22,9 @@ versions:
 recommendation: "Update to next.js software outside the effected above versions."
 patch_status: "Fully patched"
 workaround: "Block/remove 'x-middleware-subrequest'request header by proxy or WAF firewall"
-status : Open
+status : Closed
+ips: 0
+
 start: 2025-03-21
 end: 
 timeline:
