--- a/_cases/2024/DIVD-2024-00051.md
+++ b/_cases/2024/DIVD-2024-00051.md
@@ -16,7 +16,8 @@ versions:
 recommendation: "Upgrade to r1720 or later"
 workaround: "none"
 patch_status: Patch available
-status : Open
+status : Closed
+ips: 159
 start: 2024-12-09
 timeline:
 - start: 2024-12-09
