--- a/_cases/2025/DIVD-2025-00035.md
+++ b/_cases/2025/DIVD-2025-00035.md
@@ -4,7 +4,7 @@ title: "Sharepoint Mass-Exploitation (ToolShell) through CVE-2025-53770"
 excerpt: "Threat actors are targeting Sharepoint installations with CVE-2025-53770. Immediate action is required."
 author: Max van der Horst
 lead: Max van der Horst
-status : Open
+status : Closed
 researchers:
 - Victor Pasman
 - Stan Plasmeijer
@@ -18,8 +18,9 @@ versions: all
 recommendation: "Enable the Anti-Malware Scan Integration (AMSI) offered by Microsoft or take your Sharepoint installation off the internet."
 patch_status: "Not Available"
 workaround: "None"
+ips: 424
 
-status: "Open"
+status: "Closed"
 start: 2025-07-20
 end:
 timeline:
