--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -5,7 +5,7 @@ title: "Oracle E-Business Suite Vulnerabilities"
 excerpt: "Vulnerability in the Oracle Concurrent Processing product of Oracle E-Business Suite could allow attackers to bypass security controls and gain unauthorized access."
 author: Hans Meuris
 lead: Hans Meuris
-status: Open
+status: Closed
 
 researchers:
 - Hans Meuris
@@ -25,6 +25,7 @@ patch_status: "Available"
 workaround: "If patching is not immediately possible, consider disabling limiting access to trusted networks only."
 
 case_number: DIVD-2025-00040
+ips: 868
 
 status: "Open"
 start: 2025-10-06
