Add end date for DIVD-2024-00051 case

--- a/_cases/2024/DIVD-2024-00051.md
+++ b/_cases/2024/DIVD-2024-00051.md
@@ -19,6 +19,7 @@ patch_status: Patch available
 status : Closed
 ips: 159
 start: 2024-12-09
+end: 2025-03-12
 timeline:
 - start: 2024-12-09
   end:
