Update end date for case DIVD-2025-00040

--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -29,7 +29,7 @@ ips: 868
 
 status: "Open"
 start: 2025-10-06
-end:
+end: 2025-10-08
 
 timeline:
 - start: 2025-10-06
@@ -42,7 +42,7 @@ timeline:
   end:
   event: "Find vulnerable instances."
 - start: 2025-10-08
-  end:
+  end: 2025-10-08
   event: "Start notifying vulnerable instances."
 
 ---
