Change status from 'Open' to 'Closed'

--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -27,7 +27,7 @@ workaround: "If patching is not immediately possible, consider disabling limitin
 case_number: DIVD-2025-00040
 ips: 868
 
-status: "Open"
+status: "Closed"
 start: 2025-10-06
 end: 2025-10-08
 
